# TriadFused

./: Plan.md  README.md  demo.py  pyproject.toml  requirements.txt  test_attack.py  test_simple.py
scripts/: attack_train.py  create_test_image.py  eval_attack.py  install.sh
tests/: __init__.py  test_eot.py  test_train_smoke.py
triadfuse/: __init__.py  config.py  constraints.py  eot.py  losses.py
triadfuse/data/: __init__.py
triadfuse/heads/: __init__.py  glyph.py  layout.py  texture.py
triadfuse/refine/: __init__.py
triadfuse/surrogate/: __init__.py  base.py  donut.py
triadfuse/utils/: __init__.py  pdfio.py  seed.py  vis.py
